# platformer

./: .clangd  .gitignore  CMakeLists.txt  HELP.txt  Platformer  Platformer.cbp  Platformer.depend  Platformer.layout  README.md  conanfile.txt  main.cpp  platformer
Images/not used/: character.xcf
Levels/: Lvl_1.txt  Lvl_Editor.txt
Levels/old lvls/: Lvl_1.txt
MyHeaders/: ExtendedRaylib.h  Game.h  LevelEditor.h  Loader.h  Objects.h  Player.h  RayJumpHeadears.h  Settings.h  globals.h
MyHeadersCPP/: ExtendereRaylib.cpp  Game.cpp  LevelEditor.cpp  Loader.cpp  Objects.cpp  Player.cpp  RayJumpHeadears.cpp  Settings.cpp  globals.cpp
Platformer/: Platformer.cbp  Platformer.cscope_file_list  Platformer.depend  Platformer.layout  main.cpp
Platformer/Images/: character.xcf
Platformer/Images/not used/: special.xcf
Platformer/Levels/: Lvl1.txt  Lvl_1.txt  Lvl_Editor.txt
Platformer/MyHeaders/: ExtendedRaylib.h  Game.h  LevelEditor.h  Loader.h  Objects.h  Player.h  Settings.h
doxygen/: doxyfile
include/: ExtendedRaylib.h  Game.h  LevelEditor.h  Loader.h  Objects.h  Player.h  Settings.h
src/: main.cpp
